--- a/src/app/heroes/pages/list-page/list-page.component.html
+++ b/src/app/heroes/pages/list-page/list-page.component.html
@@ -1,8 +1,8 @@
 <h1>Listado de Heroes</h1>
 <mat-divider></mat-divider>
 
-<div class="grid bm-8 pt-2">
-  <div *ngFor="let hero of heroes" class="col-12 sm:col-4 md:col-3 xl:col2">
+<div class="grid mb-8 pt-2">
+  <div *ngFor="let hero of heroes" class="col-12 sm:col-4 md:col-2 xl:co-l2">
     <heroes-hero-card [hero]="hero"></heroes-hero-card>
   </div>
 </div>
